<resources>
    <string name="app_name">News</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="login_subtitle">请登录您的账户</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">还没有账户？</string>
    <string name="have_account">已有账户？</string>
    <string name="register_now">立即注册</string>
    <string name="login_now">立即登录</string>
    <string name="create_account">创建账户</string>
    <string name="register_subtitle">填写信息注册新账户</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="fill_all_fields">请填写所有必填项</string>
    <string name="password_not_match">两次输入的密码不一致</string>
    <string name="password_too_short">密码长度至少6位</string>
    <string name="username_too_short">用户名长度至少3位</string>
    <string name="logout">退出登录</string>
    <string name="welcome">欢迎</string>
</resources>